[tool.poetry]
name = "back-app"
version = "0.1.0"
description = ""
authors = ["Navid <mojtaba.farokhi99@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8, <4"
flask = "^2.3.3"
flask-cors = "^4.0.0"
flask-restx = "^1.1.0"
requests = "^2.31.0"
pysocks = "^1.7.1"
apscheduler = "^3.10.1"
web3 = "^6.8.0"
python-binance = "^1.0.19"
peewee = "^3.16.3"
psycopg2-binary = "^2.9.7"
colorlog = "^6.7.0"
multicallable = "5.1.3"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
