[tool.poetry]
name = "back-app"
version = "0.1.0"
description = ""
authors = ["Navid <mojtaba.farokhi99@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8, <4"
requests = "^2.31.0"
pysocks = "^1.7.1"
apscheduler = "^3.10.4"
web3 = "^6.12.0"
python-binance = "^1.0.19"
peewee = "^3.16.3"
psycopg2-binary = "^2.9.7"
colorlog = "^6.7.0"
multicallable = "6.0.1"
tqdm = "^4.66.1"
python-telegram-bot = "^20.6"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
black = "^23.12.0"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
